--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
 </head>
 <body>
-
+  <script src="bundle.js"></script>
 </body>
 </html>
